--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "author": "Andrew F Schorr",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.0.15",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.0.15",
     "jest": "^21.2.1"
   },
   "scripts": {
     "test": "jest"
   },
   "jest": {
-    "testMatch": ["**/ch**/*.js?(x)"]
+    "testMatch": ["**/*.test.js?(x)"]
    }
 }
