--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "author": "Andrew F Schorr",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "jest-cli": "^22.4.4"
   },
   "scripts": {
     "test": "jest"
   },
   "jest": {
-    "testMatch": ["**/*.test.js?(x)"]
-   }
+    "testMatch": [
+      "**/*.test.js?(x)"
+    ]
+  }
 }
